# nomad-gunstore-backend

./: Dockerfile  Ideal_file_structure.md  LICENSE  README.md  Requirements_for_the_thesis.md  docker-compose.yml  pyproject.toml
config/: settings.py
